Changes from the comments